# nao_kinematics_module

./: CMakeLists.txt  kinematics_module.cpp  kinematics_module.h  main.cpp  test_kinematics.cpp
